# psdk_ros2

./: README.md
fire_fighting/: CMakeLists.txt  package.xml
fire_fighting/src/: video_compress.cpp
psdk_wrapper/: CMakeLists.txt
psdk_wrapper/cfg/: link_config.json
psdk_wrapper/include/psdk_wrapper/utils/: action_server.hpp
psdk_wrapper/launch/: wrapper.launch.py
psdk_wrapper/src/: main.cpp  psdk_wrapper.cpp
